[tool.poetry]
name = "ml_review"
version = "0.1.0"
description = ""
authors = ["Jean Carlos Faoot Maia"]

[tool.poetry.dependencies]
python = "3.9"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
statsmodels = "^0.13.5"
jupyterlab = "^3.6.1"
contextualbandits = "^0.3.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
